@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.antenna.gr" version="1.1.3" name="ANT1 Player" provider-name="Twilight0">
+<addon id="plugin.video.antenna.gr" version="1.2.0" name="ANT1 Player" provider-name="Twilight0">
 	<requires>
 		<import addon="xbmc.python" version="2.24.0" />
-		<import addon="script.module.tulip" version="1.2.5" />
+		<import addon="script.module.tulip" version="1.3.4" />
 	</requires>
 	<extension point="xbmc.python.pluginsource" library="addon.py">
 		<provides>video</provides>
@@ -19,6 +19,11 @@
 		<website>http://www.antenna.gr/</website>
         <size>692701</size>
 		<news>
+[B]1.2.0[/B]
+- Enhanced live stream resolver
+- Added resolver for VOD content when called from other addons
+- Merged Hebrew translation thanks to "Eng2Heb"
+
 [B]1.1.3[/B]
 - Cosmetics
 - Tweaks in addon.xml
@@ -51,7 +56,7 @@
 			<screenshot>resources/screenshots/screenshot-03.jpg</screenshot>
 		</assets>
 		<platform>all</platform>
-		<language>el</language>
+		<language>en el</language>
 		<!--<forum></forum>-->
 		<!--<email></email>-->
 	</extension>
