@@ -1,3 +1,8 @@
+[B]1.2.0[/B]
+- Enhanced live stream resolver
+- Added resolver for VOD content when called from other addons
+- Merged Hebrew translation thanks to "Eng2Heb"
+
 [B]1.1.3[/B]
 - Cosmetics
 - Tweaks in addon.xml
